--- a/js/template/widget/TestOverview.html
+++ b/js/template/widget/TestOverview.html
@@ -6,7 +6,9 @@
                 <div class="yui3-u-c">
                     <div class="description">{{description}}&nbsp;<span class="widget-arrow"><span class="inner"></span></span></div>
 
-                    <p class="more">{{more}}</p>
+                    <div class="more">
+                        <p>{{more}}</p>
+                    </div>
                 </div>
             </div>
 
