center logo on desktop screen size https://app.asana.com/0/7908989541876/8136207663473

--- a/css-sass/view/_page.scss
+++ b/css-sass/view/_page.scss
@@ -5,6 +5,14 @@
 
 .page-section-top {
     background-color: #0099be;
+    
+    /* desktop */
+    @media (min-width:($mq-tablet)) {
+        // center logo
+        .logo-container {
+            margin: 0 5%;
+        }
+    }
 
     .logo {
         width: 100%;
