--- a/js/template/test/urineanalysis/MicroscopicParticle.html
+++ b/js/template/test/urineanalysis/MicroscopicParticle.html
@@ -34,7 +34,7 @@
                                     No microscopic particles were found in {{patient.name}}’s urine.
                                 </span>
 
-                                This means {{patient.name}}’s organs are functioning as expected.
+                                This is expected in a clear urine sample.
                             </p>
                         </div>
                     </div>
